# code-intel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/adr/: 0001-content-hash-dedup.md
scripts/: bench_memory.py
src/code_intel/: __init__.py  __main__.py  _logging.py  chunker.py  cli.py  config.py  doctor.py  embedder.py  indexer.py  lsp.py  mcp_server.py  search.py  store.py  systemd.py  watcher.py  zoekt.py
templates/: config.toml.j2  gitignore.snippet
templates/mcp/: claude-config.json.j2
templates/systemd/: code-intel-mcp@.service  code-intel-watcher@.service  code-intel-zoekt@.service
tests/: test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_search.py  test_v0_1_4_fixes.py  test_v0_1_5_fixes.py  test_v0_1_6_fixes.py  test_v0_1_7_fixes.py  test_v0_1_8_fixes.py  test_watcher_cosmetics.py
