[project]
name = "code-intel"
version = "0.1.3"
description = "Code intelligence MCP server for AI agents working on large repos"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "criznguyen", email = "ntdc.cong@gmail.com" }]
keywords = ["mcp", "code-intelligence", "ai-agents", "claude", "rag", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "tree-sitter>=0.23",
    "lancedb>=0.13",
    "pyarrow>=15",
    "httpx>=0.27",
    "mcp>=1.0",
    "watchfiles>=0.22",
    "rich>=13",
    "tomli-w>=1.0",
    "blake3>=0.4",
    "jinja2>=3.1",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-kotlin>=1.1.0",
    "pathspec>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "respx>=0.21",
]

[project.scripts]
code-intel = "code_intel.cli:app"

[project.urls]
Repository = "https://github.com/criznguyen/code-intel"
Issues = "https://github.com/criznguyen/code-intel/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_intel"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "code_intel/_templates"

[tool.hatch.build.targets.sdist]
include = ["src/code_intel", "templates", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "respx>=0.21",
]
